--- a/src/resources/view/Account.fxml
+++ b/src/resources/view/Account.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.Account"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AccountController">
+    <children>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#eeeeee" height="50.0" stroke="TRANSPARENT" strokeType="INSIDE" width="600.0" />
+        <Button fx:id="back" layoutX="153.0" layoutY="13.0" mnemonicParsing="false" onAction="#back" text="Back" />
+      <TextField fx:id="emailField" layoutX="20.0" layoutY="110.0" promptText="email" />
+      <TextField fx:id="phoneField" layoutX="20.0" layoutY="147.0" promptText="phone number" />
+      <Text fx:id="activeUserText" layoutX="20.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Label" />
+      <TextField fx:id="passwordField" layoutX="226.0" layoutY="110.0" promptText="password" />
+      <TextField fx:id="passwordField2" layoutX="226.0" layoutY="147.0" promptText="repeat password" />
+      <Button fx:id="saveButton" layoutX="20.0" layoutY="188.0" mnemonicParsing="false" onAction="#save" text="Save changes" />
+      <Text fx:id="breadCrumb" layoutX="20.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Account">
+         <font>
+            <Font name="Consolas" size="16.0" />
+         </font>
+      </Text>
+      <Button fx:id="passwordButton" layoutX="226.0" layoutY="188.0" mnemonicParsing="false" onAction="#change" text="Change password" />
+    </children>
 </AnchorPane>
