--- a/src/resources/view/Account.fxml
+++ b/src/resources/view/Account.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
@@ -23,5 +24,6 @@
          </font>
       </Text>
       <Button fx:id="passwordButton" layoutX="226.0" layoutY="188.0" mnemonicParsing="false" onAction="#change" text="Change password" />
+      <Label fx:id="notification" layoutX="226.0" layoutY="240.0" textFill="RED" />
     </children>
 </AnchorPane>
