--- a/src/resources/view/Login.fxml
+++ b/src/resources/view/Login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -19,5 +20,6 @@
             <Font name="Consolas" size="12.0" />
          </font>
       </Text>
+      <Label fx:id="notification" alignment="CENTER" contentDisplay="CENTER" layoutX="193.0" layoutY="281.0" textAlignment="CENTER" textFill="RED" />
    </children>
 </AnchorPane>
