--- a/src/main/resources/view/Account.fxml
+++ b/src/main/resources/view/Account.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AccountController">
+<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controller.AccountController">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#eeeeee" height="50.0" stroke="TRANSPARENT" strokeType="INSIDE" width="600.0" />
         <Button fx:id="back" layoutX="153.0" layoutY="13.0" mnemonicParsing="false" onAction="#back" text="Back" />
