--- a/src/main/resources/view/Login.fxml
+++ b/src/main/resources/view/Login.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
+<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controller.LoginController">
    <children>
       <TextField fx:id="email" layoutX="226.0" layoutY="162.0" promptText="email" />
       <TextField fx:id="password" layoutX="226.0" layoutY="200.0" promptText="password" />
